--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,5 @@
 .home {
-  position: absolute;
+  position: center;
   width: 100%;
   background-image: url("../images/dog-background.png");
   background-repeat: no-repeat;
